--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="Author" content="Bukgeuk"/>
-        <meta name="description" content="쉽게 사용할 수 있는 개인 클라우드!"/>
+        <meta name="description" content="Bukgeuk Cloud"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta property="og:title" content="Bcloud">
-        <meta property="og:description" content="쉽게 사용할 수 있는 개인 클라우드!">
+        <meta property="og:description" content="Bukgeuk Cloud">
+        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="css/default.css">
@@ -15,7 +16,7 @@
         <title>Bcloud</title>
         <script type="text/javascript" src="js/index.js"></script>
     </head>
-    <body class="no-drag">
+    <body class="no-drag" bgproperties="fixed">
         <script>
             init_background();
         </script>
