--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <meta name="description" content="Bukgeuk Cloud"/>
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta property="og:title" content="Bcloud">
-        <meta property="og:description" content="Bukgeuk Cloud">
-        <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+        <meta property="og:description" content="Bukgeuk Cloud">   
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
         <link rel="stylesheet" href="css/default.css">
@@ -24,11 +23,11 @@
             <div id="OuterDiv">
                 <div class="Align WidthFullCenter">
                     <div>
-                        <img src="images/icon.png", alt="Failed to load image" width="75" height="75">         
+                        <img src="images/icon.png", alt="Failed to load image" width="75" height="75">      
                         <span id="MainText">Bcloud</span>
                     </div>
                     <div class="OuterForm Align">
-                        <form name="LoginForm">
+                        <form name="LoginForm" action="cloud.html" method="POST">
                             <div class="OuterForm Align TextAlignLeft" id="AddError">
                                 <div class="form-group">
                                     <label for="InputUsername">아이디</label>
@@ -39,18 +38,7 @@
                                     <input type="password" class="form-control" name="pw" id="InputPassword">
                                 </div>
                             </div>
-                            <div class="alert alert-danger alert-dismissible fade show" role="alert" style="display: none;" id="ErrCheck">
-                                아이디/비밀번호를 확인해 주세요
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                  <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="alert alert-danger alert-dismissible fade show" role="alert" style="display: none;" id="ErrEmpty">
-                                아이디/비밀번호를 입력해 주세요
-                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                  <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
+                            <div id="ErrorDiv"></div>
                             <button type="button" class="btn btn-outline-primary btn-lg btn-block" onclick="submit_func();">로그인</button>
                         </form>
                     </div>
@@ -59,10 +47,6 @@
         </section>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="js/jquery.ajax-cross-origin.min.js"></script>
         <script type="text/javascript" src="js/sha512.js"></script>
-        <script>
-            init_error();
-        </script>
     </body>
 </html>
