--- a/cloud.html
+++ b/cloud.html
@@ -139,6 +139,19 @@
                                 <a class="dropdown-item" href="javascript:RaiseFileInputClick();">파일 업로드</a>
                             </div>
                         </div>
+                        <div class="dropdown input-group-prepend">
+                            <button class="btn input-group-text" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" onclick="checkMenuDisable();">
+                                <img src="images/menu.png" height="20" width="20">
+                            </button>
+                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
+                                <a class="dropdown-item mobilemenu-rename">이름 바꾸기</a>
+                                <a class="dropdown-item mobilemenu-delete">삭제</a>
+                                <a class="dropdown-item">새 폴더</a>
+                                <a class="dropdown-item menu-cut">잘라내기</a>
+                                <a class="dropdown-item menu-paste">붙여넣기</a>
+                                <a class="dropdown-item mobilemenu-download">다운로드</a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </header>
@@ -154,13 +167,13 @@
                             <a class="dropdown-item">삭제</a>
                             <a class="dropdown-item">새 폴더</a>
                             <a class="dropdown-item">잘라내기</a>
-                            <a class="dropdown-item">붙여넣기</a>
+                            <a class="dropdown-item menu-paste">붙여넣기</a>
                             <a class="dropdown-item">다운로드</a>
                         </div>
                         <div class="dropdown-menu" id="PageMenu" style="display: none;">
                             <a class="dropdown-item">새 폴더</a>
-                            <a class="dropdown-item">잘라내기</a>
-                            <a class="dropdown-item">붙여넣기</a>
+                            <a class="dropdown-item menu-cut">잘라내기</a>
+                            <a class="dropdown-item menu-paste">붙여넣기</a>
                         </div>
                         <div style="border-bottom: 2px solid rgba(82, 83, 85, 0.288);" id="FirstBorderLine"></div>
                         <div style="display: none;" id="NoFile">
