--- a/cloud.html
+++ b/cloud.html
@@ -9,11 +9,13 @@
         <meta property="og:description" content="Bukgeuk Cloud">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" />
         <link rel="stylesheet" href="css/default.css">
         <link rel="stylesheet" href="css/cloud.css">
         <link href="https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap" rel="stylesheet">
         <title>Bcloud</title>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script type="text/javascript" src="js/data_structure.js"></script>
@@ -22,6 +24,7 @@
         <script type="text/javascript" src="js/event.js"></script>
         <script type="text/javascript" src="js/reload.js"></script>
         <script type="text/javascript" src="js/click.js"></script>
+        <script type="text/javascript" src="js/modal.js"></script>
         <script type="text/javascript" src="js/cloud.js"></script>
     </head>
     <body class="no-drag" style="overflow-x: hidden;">
@@ -93,7 +96,7 @@
                                 <img src="images/plus.png" height="20" width="20">
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item">새 폴더</a>
+                                <a class="dropdown-item" onclick="openCreateFolderModal();">새 폴더</a>
                                 <a class="dropdown-item" href="javascript:RaiseFileInputClick();">파일 업로드</a>
                             </div>
                         </div>
@@ -135,7 +138,7 @@
                                 <img src="images/plus.png" height="20" width="20">
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item">새 폴더 추가</a>
+                                <a class="dropdown-item" onclick="openCreateFolderModal();">새 폴더</a>
                                 <a class="dropdown-item" href="javascript:RaiseFileInputClick();">파일 업로드</a>
                             </div>
                         </div>
@@ -144,12 +147,12 @@
                                 <img src="images/menu.png" height="20" width="20">
                             </button>
                             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuButton">
-                                <a class="dropdown-item mobilemenu-rename">이름 바꾸기</a>
-                                <a class="dropdown-item mobilemenu-delete">삭제</a>
-                                <a class="dropdown-item">새 폴더</a>
-                                <a class="dropdown-item menu-cut">잘라내기</a>
-                                <a class="dropdown-item menu-paste">붙여넣기</a>
-                                <a class="dropdown-item mobilemenu-download">다운로드</a>
+                                <a class="dropdown-item mobilemenu-rename" onclick="openRenameModal();">이름 바꾸기</a>
+                                <a class="dropdown-item mobilemenu-delete" onclick="openRemoveModal();">삭제</a>
+                                <a class="dropdown-item" onclick="openCreateFolderModal();">새 폴더</a>
+                                <a class="dropdown-item menu-cut" onclick="clickItemCut();">잘라내기</a>
+                                <a class="dropdown-item menu-paste" onclick="clickItemPaste();">붙여넣기</a>
+                                <a class="dropdown-item mobilemenu-download" onclick="clickDownload();">다운로드</a>
                             </div>
                         </div>
                     </div>
@@ -163,17 +166,17 @@
                             <span class="sr-only">Loading...</span>
                         </div>
                         <div class="dropdown-menu" id="Menu" style="display: none;">
-                            <a class="dropdown-item">이름 바꾸기</a>
-                            <a class="dropdown-item">삭제</a>
-                            <a class="dropdown-item">새 폴더</a>
-                            <a class="dropdown-item">잘라내기</a>
-                            <a class="dropdown-item menu-paste">붙여넣기</a>
-                            <a class="dropdown-item">다운로드</a>
+                            <a class="dropdown-item" onclick="openRenameModal();">이름 바꾸기</a>
+                            <a class="dropdown-item" onclick="openRemoveModal();">삭제</a>
+                            <a class="dropdown-item" onclick="openCreateFolderModal();">새 폴더</a>
+                            <a class="dropdown-item" onclick="clickItemCut();">잘라내기</a>
+                            <a class="dropdown-item menu-paste" onclick="clickItemPaste();">붙여넣기</a>
+                            <a class="dropdown-item" onclick="clickDownload();">다운로드</a>
                         </div>
                         <div class="dropdown-menu" id="PageMenu" style="display: none;">
-                            <a class="dropdown-item">새 폴더</a>
-                            <a class="dropdown-item menu-cut">잘라내기</a>
-                            <a class="dropdown-item menu-paste">붙여넣기</a>
+                            <a class="dropdown-item" onclick="openCreateFolderModal();">새 폴더</a>
+                            <a class="dropdown-item menu-cut" onclick="clickItemCut();">잘라내기</a>
+                            <a class="dropdown-item menu-paste" onclick="clickItemPaste();">붙여넣기</a>
                         </div>
                         <div style="border-bottom: 2px solid rgba(82, 83, 85, 0.288);" id="FirstBorderLine"></div>
                         <div style="display: none;" id="NoFile">
@@ -181,6 +184,85 @@
                                 파일이 없습니다
                             </div>
                         </div>
+                          
+                        <!-- Rename Modal -->
+                        <button type="button" class="btn btn-primary" id="openRenameModal" data-toggle="modal" data-target="#RenameModal" style="display: none;"></button>
+                        <div class="modal fade" id="RenameModal" tabindex="-1" role="dialog" aria-labelledby="RenameModalTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="RenameModalCenterTitle">이름 바꾸기</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="InputNewName">새 이름</label>
+                                                <input hidden="hidden"/>
+                                                <input type="text" class="form-control" name="newname" id="InputNewName" onkeydown="if(Number(event.keyCode) === 13) renameSave();">
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                        <button type="button" class="btn btn-primary" onclick="renameSave();">확인</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- CreateFolder Modal -->
+                        <button type="button" class="btn btn-primary" id="openCreateFolderModal" data-toggle="modal" data-target="#CreateFolderModal" style="display: none;"></button>
+                        <div class="modal fade" id="CreateFolderModal" tabindex="-1" role="dialog" aria-labelledby="CreateFolderModalTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="CreateFolderModalCenterTitle">새 폴더 만들기</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="InputFolderName">폴더 이름</label>
+                                                <input hidden="hidden"/>
+                                                <input type="text" class="form-control" name="folder-name" id="InputFolderName" onkeydown="if(Number(event.keyCode) === 13) createFolderSave();">
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                        <button type="button" class="btn btn-primary" onclick="createFolderSave();">확인</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Remove Modal -->
+                        <button type="button" class="btn btn-primary" id="openRemoveModal" data-toggle="modal" data-target="#RemoveModal" style="display: none;"></button>
+                        <div class="modal fade" id="RemoveModal" tabindex="-1" role="dialog" aria-labelledby="RemoveModalTitle" aria-hidden="true" onkeydown="if(Number(event.keyCode) === 13) removeSave();">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="RemoveModalCenterTitle">파일 삭제</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p id="RemoveConfirmText"></p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                        <button type="button" class="btn btn-danger" onclick="removeSave();">삭제</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div id="Files">
                             
                         </div>
