modify button color of createfolder modal

--- a/cloud.html
+++ b/cloud.html
@@ -143,7 +143,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
-                                        <button type="button" class="btn btn-primary" onclick="createFolderSave();">확인</button>
+                                        <button type="button" class="btn btn-success" onclick="createFolderSave();">확인</button>
                                     </div>
                                 </div>
                             </div>
