link sharing function

--- a/cloud.html
+++ b/cloud.html
@@ -80,6 +80,7 @@
                             <a class="dropdown-item" onclick="clickItemCut();">잘라내기</a>
                             <a class="dropdown-item menu-paste" onclick="clickItemPaste();">붙여넣기</a>
                             <a class="dropdown-item" onclick="clickDownload();">다운로드</a>
+                            <a class="dropdown-item" onclick="clickShare();">링크 공유</a>
                         </div>
                         <div class="dropdown-menu" id="PageMenu" style="display: none;">
                             <a class="dropdown-item" onclick="openCreateFolderModal();">새 폴더</a>
@@ -143,7 +144,7 @@
                                     </div>
                                     <div class="modal-footer">
                                         <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
-                                        <button type="button" class="btn btn-success" onclick="createFolderSave();">확인</button>
+                                        <button type="button" class="btn btn-success" onclick="createFolderSave();">생성</button>
                                     </div>
                                 </div>
                             </div>
