security update : hash & change api url

--- a/index.html
+++ b/index.html
@@ -50,6 +50,6 @@
         </section>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="js/sha512.js"></script>
+        <script type="text/javascript" src="js/hash.js"></script>
     </body>
 </html>
