--- a/cloud.html
+++ b/cloud.html
@@ -43,7 +43,7 @@
                         </span>
                     </div>
                     <a class="navText navClick" onclick="openUploadProgressModal()">Uploads</a>
-                    <a class="navText navClick" href="#">비밀번호 변경</a>
+                    <a class="navText navClick" onclick="openChangePasswordModal()">비밀번호 변경</a>
                     <a class="navText navClick" href="#">Contact</a>
                     <a class="navSmallText navLogout" onclick="clickLogout()">Logout</a>
                 </div>
@@ -216,6 +216,37 @@
                             </div>
                         </div>
 
+                        <!-- changePassword Modal -->
+                        <button type="button" class="btn btn-primary" id="openChangePasswordModal" data-toggle="modal" data-target="#ChangePasswordModal" style="display: none;"></button>
+                        <div class="modal fade" id="ChangePasswordModal" tabindex="-1" role="dialog" aria-labelledby="ChangePasswordModalTitle" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="ChangePasswordCenterTitle">비밀번호 변경</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <form>
+                                            <div class="form-group">
+                                                <label for="InputCurrentPassword">현재 비밀번호</label>
+                                                <input hidden="hidden"/>
+                                                <input type="password" class="form-control" name="CurrentPassword" id="InputCurrentPassword" onkeydown="if(Number(event.keyCode) === 13) ChangePasswordSave();" style="margin-bottom: 20px;">
+                                                <label for="InputCurrentPassword">새 비밀번호</label>
+                                                <input hidden="hidden"/>
+                                                <input type="password" class="form-control" name="NewPassword" id="InputNewPassword" onkeydown="if(Number(event.keyCode) === 13) ChangePasswordSave();">
+                                            </div>
+                                        </form>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                        <button type="button" class="btn btn-success" onclick="ChangePasswordSave();">적용</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div id="Files">
                             
                         </div>
@@ -225,7 +256,7 @@
         </section>
         <div id="import">
             <script type="text/javascript" src="js/check.js"></script>
-
+            <script type="text/javascript" src="js/hash.js"></script>
         </div>
     </body>
 </html>
