add contact function

--- a/cloud.html
+++ b/cloud.html
@@ -44,7 +44,7 @@
                     </div>
                     <a class="navText navClick" onclick="openUploadProgressModal()">Uploads</a>
                     <a class="navText navClick" onclick="openChangePasswordModal()">비밀번호 변경</a>
-                    <a class="navText navClick" href="#">Contact</a>
+                    <a class="navText navClick" href="mailto:bukgeuk1234@gmail.com">Contact</a>
                     <a class="navSmallText navLogout" onclick="clickLogout()">Logout</a>
                 </div>
                 <div class="TextAlignCenter">
