--- a/cloud.html
+++ b/cloud.html
@@ -247,6 +247,28 @@
                             </div>
                         </div>
 
+                        <!-- Logout Modal -->
+                        <button type="button" class="btn btn-primary" id="openLogoutModal" data-toggle="modal" data-target="#LogoutModal" style="display: none;"></button>
+                        <div class="modal fade" id="LogoutModal" tabindex="-1" role="dialog" aria-labelledby="LogoutModalTitle" aria-hidden="true" onkeydown="if(Number(event.keyCode) === 13) LogoutSave();">
+                            <div class="modal-dialog modal-dialog-centered" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title" id="LogoutModalCenterTitle">Logout</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p style="text-align: center; margin-top: 16px; font-size: 1.2rem;">로그아웃 하시겠습니까?</p>
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">취소</button>
+                                        <button type="button" class="btn btn-primary" onclick="LogoutSave();">확인</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                         <div id="Files">
                             
                         </div>
