add edge compatible code

--- a/cloud.html
+++ b/cloud.html
@@ -267,10 +267,10 @@
                                             <p>파일 이름 변경 : F2</p>
                                         </div>
                                         <div class="shortcut-box">
-                                            <p>파일 목록 로딩 : F5</p>
+                                            <p>파일 목록 로딩 : F5, Ctrl + R</p>
                                             <p>잘라내기 : Ctrl + X</p>
                                             <p>붙여넣기 : Ctrl + V</p>
-                                            <p>로그아웃 : Ctrl + Q</p>
+                                            <p>로그아웃 : Shift + Q</p>
                                         </div>
                                         <div class="shortcut-box">
                                             <p>업로드 열기 : Shift + L</p>
